# shepherd

./: .gitignore  LICENSE  README.md  RUNME_conditional_generation_MOSESaq.ipynb  datasets.py  environment.yml  inference.py  lightning_module.py  pyproject.toml  setup.py
conformers/fragment_merging/: fragment_merge_condition.pickle
conformers/gdb/: molblock_charges_9_test100.pkl
conformers/pdb/: molblock_charges_bestdocked_lowestenergy.pkl  molblock_charges_pdb_lowestenergy.pkl
examples/: RUNME_unconditional_generation.ipynb  analyze_basic_inference_results.py  basic_inference_test.py
examples/inference_scaling/: README.md  analyze_inference_scaling_experiments.py  run_inference_scaling_experiment.py  run_nfe_sweep.sh  run_nfe_sweep_sop.sh  run_sop_sweep.py  visualize_scaling_results.py
examples/paper_experiments/: run_inference_fragment_merging.py  run_inference_gdb_conditional_x2.py  run_inference_gdb_conditional_x3.py  run_inference_pdb.py  (+4 more)
model/: equiformer_operations.py  equiformer_v2_encoder.py  model.py
paper_experiments/: run_inference_gdb_unconditional_x1x2.py  run_inference_gdb_unconditional_x1x3.py  run_inference_gdb_unconditional_x1x4.py  run_inference_mosesaq_unconditional_x1x3x4.py  run_inference_pdb_pose.py
parameters/: params_x1x3_diffusion_gdb17_20240824.py  params_x1x3x4_diffusion_mosesaq_20240824.py  params_x1x4_diffusion_gdb17_20240824.py
shepherd.egg-info/: PKG-INFO  SOURCES.txt
tests/: example_results.pkl  inference_scaling_conditional.py  test_inference_scaling.py  test_inference_scaling_integration.py  test_rdkit_integration.py
(+70 files in other folders)
